fix logo background not stretching out anymore

--- a/static-dev/sass/_head.scss
+++ b/static-dev/sass/_head.scss
@@ -18,6 +18,7 @@
         weight: 600;
       }
       padding: 0 .4em;
+      width: max-content;
 
       &,
       &:active,
